# tcc

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  payment curl
back/: IsoRequest.py  app.py  pyproject.toml  requirements.txt
front/: app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
front/src/: App.vue
front/static/: front.js
front/templates/: main.html
simple_crud/: .gitignore  app.py  pyproject.toml  requirements.txt
simple_crud/forms/: Forms.py
simple_crud/instance/: config.py
simple_crud/models/: Account.py  Administrador.py  BaseModel.py  Card.py  Cliente.py  Conta.py  Estoque.py  Fornecedor.py  Insumos.py  Loja.py  LojaPublica.py  Pedido.py  Produto.py  RedeLojas.py  ShopAdmin.py  TransferHistory.py  Usuario.py
simple_crud/repository/: account.py  base_mongo.py  card.py  produto.py  transfer_history.py  usuario.py
simple_crud/static/: contas.js  main.js  pedido_cadastro.js  produto_cadastro.js
simple_crud/templates/: base.html  create_shop.html  crud.html  edit.html  home.html  login.html  main.html  not_found.html  profile.html  profile_edit.html  register.html  shop.html  shop_edit.html  shop_invnetory.html  shop_profile.html  table.html  userview.html
simple_crud/templates/admin/: home.html  login.html  main.html
simple_crud/templates/base/: nav.html  pagination.html  table.html  utils.html
simple_crud/templates/bootstrap/: form.html  nav.html  pagination.html  table.html  utils.html
simple_crud/views/: account.py  base_crud.py  card.py  produto.py  transfer_history.py  user.py
(+317 files in other folders)
