[tool.poetry]
name = "front"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pip='23.0.1'
setuptools='67.4.0 '
Flask='2.2.3 '
Flask-SocketIO='5.3.2'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
